Cambio orden del menu inferior con propiedad order

--- a/index.html
+++ b/index.html
@@ -7,54 +7,54 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Pizzeria</title>
 </head>
-<body class="fondobody">
-    <header class="encabezado">
-        <div>
-            <img src="./img/Logo (1).png">
-        </div>
-                <div>      
-                    <nav>
-                        <ul class="menutop" type="none">
-                            <li>Home</li>
-                            <li>Ranking</li>
-                            <li>Promoción</li>
-                            <li>Contacto</li>
-                        </ul>
-                    </nav>           
-                <div>        
-    </header>
-        <main class="fondomain">
-                <div class="espaciadosuperior">
-                    <h2 class="letraroja posicionletras">Envio gratis <span class="letrablanca">comprando </span> 2 pizzas</h2>
-                    <img src="./img/delivery.jpg" alt="">
-                </div>
-                    <div class="itemderecha espaciadosuperior">
-                        <h2 class="textocentrado">Podio de Pizzas</h2>
-                            <div class="posicionderecha">                                
-                                    <ol><span>Pizzas top 5</span>
-                                        </br>
-                                        <li>Muzzarella</li>
-                                        <li>Hawaiana</li>
-                                        <li>Muzzarella J&Morron</li>
-                                        <li>Fugazetta</li>
-                                        <li>Calabresa</li>
-                                    </ol>
-                                    <div>           
-                            <img class="pizzaimagen" src="./img/PizzaFalling.jpg"></div>
-                            </div>
+    <body class="fondobody">
+        <header class="encabezado">
+            <div>
+                <img src="./img/Logo (1).png">
+            </div>
+                    <div>      
+                        <nav>
+                            <ul class="menutop" type="none">
+                                <li>Home</li>
+                                <li>Ranking</li>
+                                <li>Promoción</li>
+                                <li>Contacto</li>
+                            </ul>
+                        </nav>           
+                    <div>        
+        </header>
+            <main class="fondomain">
+                    <div class="espaciadosuperior">
+                        <h2 class="letraroja posicionletras">Envio gratis <span class="letrablanca">comprando </span> 2 pizzas</h2>
+                        <img src="./img/delivery.jpg" alt="">
                     </div>
-        </main>                   
-            <footer class="pie">
-                <ul class="menuabajo" type="none">
-                    <li>Home</li>
-                    <li>Ranking</li>
-                    <li>Promoción</li>
-                    <li>Contacto</li>
-                </ul>
-                    <div class="logoabajo">
-                        <img src="./img/Logo (1).png" alt="">
-                    </div>
-            </footer>
-            
-</body>
+                        <div class="itemderecha espaciadosuperior">
+                            <h2 class="textocentrado">Podio de Pizzas</h2>
+                                <div class="posicionderecha">                                
+                                        <ol><span>Pizzas top 5</span>
+                                            </br>
+                                            <li>Muzzarella</li>
+                                            <li>Hawaiana</li>
+                                            <li>Muzzarella J&Morron</li>
+                                            <li>Fugazetta</li>
+                                            <li>Calabresa</li>
+                                        </ol>
+                                            <div>           
+                                                <img class="pizzaimagen" src="./img/PizzaFalling.jpg">
+                                            </div>
+                                </div>
+                        </div>
+            </main>                   
+                <footer class="pie">
+                    <ul class="menuabajo" type="none">
+                        <li class="menu1">Home</li>
+                        <li class="menu2">Ranking</li>
+                        <li class="menu3">Promoción</li>
+                        <li class="menu4">Contacto</li>
+                    </ul>
+                        <div class="logoabajo">
+                            <img src="./img/Logo (1).png" alt="">
+                        </div>
+                </footer>                
+    </body>
 </html>
